test-legacy/tests/packages/udo-args/udo-args-named-typed-secret-literal.txt
error: argument `value` must be of type `secret` (got `string`)
 --> tests/packages/udo-args/udo-args-named-typed-secret-literal.tql:6:35
  |
6 | argspkg::typed_named_secret value="const"
  |                                   ^^^^^^^ 
  |
  = usage: argspkg::typed_named_secret value=secret
  = note: parameters:
            named:
              name   type    default  description
              value  secret  -        Must be a secret expression
